--- a/ClavinLocation/build.properties
+++ b/ClavinLocation/build.properties
@@ -1,7 +1,7 @@
 # Ant properties for building the Clavin
 
-#appserver.home=/opt/www/tomcat
-appserver.home=/usr/share/tomcat7
+appserver.home=/opt/www/apache-tomcat-7.0.50
+#appserver.home=/usr/share/tomcat7
 # for Tomcat 5 use $appserver.home}/server/lib
 # for Tomcat 6 use $appserver.home}/lib
 appserver.lib=${appserver.home}/libs
