--- a/ClavinLocation/build.xml
+++ b/ClavinLocation/build.xml
@@ -80,6 +80,7 @@
 				<fileset dir="${src.dir}">
 					<include name="**/*.properties"/>
 					<include name="**/*.xml"/>
+					<include name="**/*.*"/>
 				</fileset>
 			</copy>
 	    </target>
